Correct gap and color from box subtext

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ button {
   flex-wrap: wrap;
   width: 170px;
   justify-content: center;
+  gap:10px;
 }
 
 .container > img {
@@ -116,7 +117,7 @@ button {
 }
 
 .container > .subtext {
-  color: black;
+  color: rgb(68, 68, 68);
 }
 
 .quote{
